[package]
name = "hulk-rs"
version = "1.2.2"
edition = "2021"
authors = ["Hexalyse"]
license = "GPL-3.0"
description = "HULK DoS tool ported to Rust with additional features"
readme = "README.md"
homepage = "https://github.com/Hexalyse/hulk-rs"
repository = "https://github.com/Hexalyse/hulk-rs"
keywords = ["dos", "hulk", "infosec"]
categories = ["command-line-utilities"]

[[bin]]
name = "hulk"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
rand = "0.8.5"
futures = "0.3"
hyper-tls = "0.5.0"

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Strip symbols from binary
panic = "abort"     # We don't need stacktrace on the release version